analyzing some features, output missing values

--- a/arrests-analysis.ipynb
+++ b/arrests-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,6 +230,221 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def null_values(df, return_table=True):\n",
+    "    mis_val = df.isnull().sum()\n",
+    "    mis_val_percent = 100 * mis_val / len(df)\n",
+    "    mis_val_table = pd.concat([mis_val, mis_val_percent], axis=1)\n",
+    "    mis_val_table_ren_columns = mis_val_table.rename(\n",
+    "    columns = {0 : 'Missing Values', 1 : '% of Total Values'})\n",
+    "    mis_val_table_ren_columns = mis_val_table_ren_columns[\n",
+    "        mis_val_table_ren_columns.iloc[:, 1] != 0].sort_values(\n",
+    "        '% of Total Values', ascending=False).round(4)\n",
+    "    print(\"There are\", len(df.columns), \"columns in total.\")\n",
+    "    print(\"There are \" + str(mis_val_table_ren_columns.shape[0]) +\n",
+    "              \" columns that have missing values.\")\n",
+    "    if return_table:\n",
+    "        return mis_val_table_ren_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 12 columns in total.\n",
+      "There are 9 columns that have missing values.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing Values</th>\n",
+       "      <th>% of Total Values</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>NameSuffix</td>\n",
+       "      <td>15770</td>\n",
+       "      <td>90.7365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>HouseNumber</td>\n",
+       "      <td>1930</td>\n",
+       "      <td>11.1047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>MiddleName</td>\n",
+       "      <td>1144</td>\n",
+       "      <td>6.5823</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Street</td>\n",
+       "      <td>883</td>\n",
+       "      <td>5.0806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Statute</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.1036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>StatuteDescription</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.1036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Race</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.0978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sex</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.0460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>FirstName</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0115</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Missing Values  % of Total Values\n",
+       "NameSuffix                   15770            90.7365\n",
+       "HouseNumber                   1930            11.1047\n",
+       "MiddleName                    1144             6.5823\n",
+       "Street                         883             5.0806\n",
+       "Statute                         18             0.1036\n",
+       "StatuteDescription              18             0.1036\n",
+       "Race                            17             0.0978\n",
+       "Sex                              8             0.0460\n",
+       "FirstName                        2             0.0115"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "miss_values = null_values(arrests)\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "miss_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To impute missing data in 'Sex', all nan values should be replaced with 'Unknown'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Female', 'Male', nan, 'Unknown'], dtype=object)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arrests['Sex'].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What are 'nwt', 'doc', and 'jpg' doing in the 'Race' feature?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrests.loc[arrests['Race'] == 'nwt']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "arrests.loc[arrests['Race'] == 'doc']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that there are multiple descriptions that correspond to the same statute. Therefore, we drop the StatuteDescription feature because it does not add anything to the data.\n",
+    "\n",
+    "It is reasonable to perform feature engineering that assigns a unique number to a full name, including the suffix if applicable, since we see that one person can and often commits more than one offense."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrests['StatuteDescription'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrests['Statute'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -252,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
