prepared address for geoencoding, converted dates and times

--- a/arrests-analysis.ipynb
+++ b/arrests-analysis.ipynb
@@ -2,19 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import sklearn\n",
+    "import sklearn as sk\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopy\n",
+    "import geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrests = pd.read_csv('Arrests.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locator = geopy.Nominatim(user_agent=\"myGeocoder\")\n",
+    "location = locator.geocode(\"Jefferson Park Ave, Charlottesville, VA\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38.0255412 -78.5149948\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(location.latitude, location.longitude)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +95,6 @@
     }
    ],
    "source": [
-    "arrests = pd.read_csv('Arrests.csv')\n",
     "arrests.info()"
    ]
   },
@@ -206,26 +258,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['ArrestID', 'ArrestDatetime', 'FirstName', 'HouseNumber', 'LastName',\n",
-       "       'MiddleName', 'NameSuffix', 'Statute', 'StatuteDescription', 'Street',\n",
-       "       'Race', 'Sex'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "arrests.columns"
+    "To convert the date, we will split it into two columns. One will be a float64 in units of months (do we ignore the year?). The other will be a float64 in units of hours."
    ]
   },
   {
@@ -248,6 +284,13 @@
     "              \" columns that have missing values.\")\n",
     "    if return_table:\n",
     "        return mis_val_table_ren_columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The only nonmissing features are the ID, the date and time, and the last name."
    ]
   },
   {
@@ -393,6 +436,111 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The two rows without first names are interesting. In the row with ID 2262, the last name is a placeholder 'JOHN DOE'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ArrestID</th>\n",
+       "      <th>ArrestDatetime</th>\n",
+       "      <th>FirstName</th>\n",
+       "      <th>HouseNumber</th>\n",
+       "      <th>LastName</th>\n",
+       "      <th>MiddleName</th>\n",
+       "      <th>NameSuffix</th>\n",
+       "      <th>Statute</th>\n",
+       "      <th>StatuteDescription</th>\n",
+       "      <th>Street</th>\n",
+       "      <th>Race</th>\n",
+       "      <th>Sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>696</td>\n",
+       "      <td>1697</td>\n",
+       "      <td>2019-03-15T00:38:00.000Z</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PURPLERAIN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>905</td>\n",
+       "      <td>DRUNKENESS</td>\n",
+       "      <td>BROWN ST</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5261</td>\n",
+       "      <td>2262</td>\n",
+       "      <td>2018-12-24T13:06:00.000Z</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1131.0</td>\n",
+       "      <td>JOHN DOE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18.2-388</td>\n",
+       "      <td>PROFANE SWEARING OR INTOXICATION IN PUBLIC</td>\n",
+       "      <td>5TH ST SW</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      ArrestID            ArrestDatetime FirstName  HouseNumber    LastName  \\\n",
+       "696       1697  2019-03-15T00:38:00.000Z       NaN          NaN  PURPLERAIN   \n",
+       "5261      2262  2018-12-24T13:06:00.000Z       NaN       1131.0    JOHN DOE   \n",
+       "\n",
+       "     MiddleName NameSuffix   Statute  \\\n",
+       "696         NaN        NaN       905   \n",
+       "5261        NaN        NaN  18.2-388   \n",
+       "\n",
+       "                              StatuteDescription     Street   Race     Sex  \n",
+       "696                                   DRUNKENESS   BROWN ST  Black  Female  \n",
+       "5261  PROFANE SWEARING OR INTOXICATION IN PUBLIC  5TH ST SW  White    Male  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arrests.loc[arrests['FirstName'] != arrests['FirstName']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What are 'nwt', 'doc', and 'jpg' doing in the 'Race' feature?"
    ]
   },
@@ -422,8 +570,37 @@
    "source": [
     "We see that there are multiple descriptions that correspond to the same statute. Therefore, we drop the StatuteDescription feature because it does not add anything to the data.\n",
     "\n",
-    "It is reasonable to perform feature engineering that assigns a unique number to a full name, including the suffix if applicable, since we see that one person can and often commits more than one offense."
+    "If we keep the names, it is reasonable to perform feature engineering that assigns a unique number to a full name, including the suffix if applicable, since we see that one person can and often commits more than one offense. We will have to convert every name to uppercase, since the capitalization is inconsistent.\n",
+    "\n",
+    "There are 472 unique statutes. A OneHotEncoder will result in the number of features increasing to about 480."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'Jr', 'II', 'III', 'Sr', 'IV'], dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arrests['NameSuffix'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -441,6 +618,311 @@
    "outputs": [],
    "source": [
     "arrests['Statute'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "472"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arrests['Statute'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We drop the ArrestID and StatuteDescription because the former is useless and the latter is redundant with Statute. In fact, there are many descriptions that can potentially refer to the same statute. We also drop the names since there are too many unique names for an analysis to be useful with them kept."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrests = pd.read_csv('Arrests.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "useless_and_redundant = ['ArrestID', 'StatuteDescription']\n",
+    "names = ['FirstName', 'LastName', 'MiddleName', 'NameSuffix']\n",
+    "arrests.drop(useless_and_redundant, axis=1, inplace=True)\n",
+    "arrests.drop(names, axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arrests['Year'] = pd.to_datetime(arrests['ArrestDatetime']).apply(\n",
+    "    lambda x: float(x.strftime('%Y')) if x == x else np.nan)\n",
+    "arrests['Month'] = pd.to_datetime(arrests['ArrestDatetime']).apply(\n",
+    "    lambda x: float(x.strftime('%m')) if x == x else np.nan) \n",
+    "arrests['Day'] = pd.to_datetime(arrests['ArrestDatetime']).apply(\n",
+    "    lambda x: float(x.strftime('%d')) if x == x else np.nan) \n",
+    "arrests['Time'] = pd.to_datetime(arrests['ArrestDatetime']).apply(\n",
+    "    lambda x: 3600 * float(x.strftime('%H')) + 60 * float(x.strftime('%M')) + float(x.strftime('%S'))\n",
+    "    if x == x else np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_housenumber(x):\n",
+    "    if x == x:\n",
+    "        return str(int(x))\n",
+    "    else:\n",
+    "        return\n",
+    "\n",
+    "arrests['HouseNumber'] = arrests['HouseNumber'].apply(convert_housenumber)\n",
+    "arrests['Address'] = arrests['HouseNumber'] + ' ' + arrests['Street'] + ', CHARLOTTESVILLE, VA'\n",
+    "arrests.drop(['ArrestDatetime', 'HouseNumber', 'Street'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Statute</th>\n",
+       "      <th>Race</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Address</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.2-415</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>26340.0</td>\n",
+       "      <td>1505 UNIVERSITY AVE, CHARLOTTESVILLE, VA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18.2-388</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>25140.0</td>\n",
+       "      <td>109 CULBRETH RD, CHARLOTTESVILLE, VA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.2-111</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>14400.0</td>\n",
+       "      <td>350 PARK ST, CHARLOTTESVILLE, VA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19.2-306</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>7051 LOUISA RD, CHARLOTTESVILLE, VA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18.2-137(B)(i)</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2019.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>65700.0</td>\n",
+       "      <td>606 E MARKET ST, CHARLOTTESVILLE, VA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Statute   Race     Sex    Year  Month   Day     Time  \\\n",
+       "0        18.2-415  Black  Female  2019.0    6.0  13.0  26340.0   \n",
+       "1        18.2-388  White    Male  2019.0    6.0  13.0  25140.0   \n",
+       "2        18.2-111  White  Female  2019.0    6.0  13.0  14400.0   \n",
+       "3        19.2-306  Black    Male  2019.0    6.0  13.0    120.0   \n",
+       "4  18.2-137(B)(i)  White    Male  2019.0    6.0  12.0  65700.0   \n",
+       "\n",
+       "                                    Address  \n",
+       "0  1505 UNIVERSITY AVE, CHARLOTTESVILLE, VA  \n",
+       "1      109 CULBRETH RD, CHARLOTTESVILLE, VA  \n",
+       "2          350 PARK ST, CHARLOTTESVILLE, VA  \n",
+       "3       7051 LOUISA RD, CHARLOTTESVILLE, VA  \n",
+       "4      606 E MARKET ST, CHARLOTTESVILLE, VA  "
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arrests.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use LabelEncoding for 'Sex' and OneHotEncoding for 'Race'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_races(x):\n",
+    "    if x == 'nwt' or x == 'doc' or x == 'jpg' or x != x:\n",
+    "        return 'Unknown'\n",
+    "    else:\n",
+    "        return x\n",
+    "    \n",
+    "arrests['Race'] = arrests['Race'].apply(convert_races)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Black', 'White', 'Asian or Pacific Islander', 'Unknown',\n",
+       "       'American Indian/Alaskan Native'], dtype=object)"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.set_option('display.max_rows', None)\n",
+    "arrests['Race'].unique()"
    ]
   },
   {
