Crime_Data lat long using ArcGIS Pro

--- a/crime_data-analysis.ipynb
+++ b/crime_data-analysis.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "array(['CPD'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "True"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,12 +252,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# safe to remove RecordID, Agency, IncidentID\n"
+    "# safe to remove RecordID, Agency, IncidentID\n",
+    "crime = crime.drop(columns=['RecordID', 'Agency', 'IncidentID'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crime['BlockString'] = crime['BlockNumber'].apply(lambda x: '' if np.isnan(x) else int(x))\n",
+    "crime['Address'] = crime['BlockString'].astype(str)+' '+crime['StreetName']+', Charlottesville VA'\n",
+    "crime.to_csv('addresses.csv', columns=['Address'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from geopy.geocoders import ArcGIS\n",
+    "# geolocator = ArcGIS(user_agent=\"cville-crime\", timeout=10)\n",
+    "\n",
+    "# locations = crime['Address'][:5].apply(lambda x: geolocator.geocode(x))\n",
+    "# crime['Latitude'] = locations.apply(lambda x: x.latitude)\n",
+    "# crime['Longitude'] = locations.apply(lambda x: x.longitude)\n",
+    "# locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
